# F407-LVGL-Watch

./: .mxproject  F4-LVGL-Watch.ioc  README.md
Core/Inc/: FreeRTOSConfig.h  dma.h  main.h  rtc.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Core/Src/: adc.c  dma.c  freertos.c  fsmc.c  gpio.c  iwdg.c  main.c  rtc.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
Drivers-BSP/AT24CXX/: 24cxx.c  24cxx.h
Drivers-BSP/BLE/: Hc06.c  Hc06.h
Drivers-BSP/DTH11/: Dth11.c  Dth11.h
Drivers-BSP/KEY/: key.c  key.h
Drivers-BSP/LCD/: GUI.c  GUI.h  Lcd.h
Drivers-BSP/LED/: led.c  led.h
Drivers-BSP/MPU6050/: mpu6050.c  mpu6050.h
Drivers-BSP/RC522/: RC522.c  RC522.h
Drivers-BSP/TEMT6000/: TEMT6000.c  TEMT6000.h
Drivers-BSP/TOUCH/: touch.c  touch.h
Drivers-SYSTEM/: myiic.h
Drivers-SYSTEM/Delay/: Delay.c  Delay.h
LVGL/: lv_conf.h
LVGL/Lv_simulator_vs2022/Qi_Watch/LVGL.Simulator/ui/: CMakeLists.txt  StrCalculate.c  filelist.txt  ui.c  ui.h  ui_events.h
LVGL/Lv_simulator_vs2022/Qi_Watch/LVGL.Simulator/ui/images/: ui_img_1508907960.c  ui_img_add_png.c  ui_img_alarm_png.c  ui_img_alarmoff_png.c  ui_img_confirm_png.c  ui_img_drain_png.c  ui_img_iu1_png.c  ui_img_iu_bg3_png.c  ui_img_light_png.c  ui_img_readcard_png.c  ui_img_setting_png.c  ui_img_step_png.c  ui_img_suspend_png.c  ui_img_wifi_png.c  ui_img_wrist_png.c
LVGL/Lv_simulator_vs2022/Qi_Watch/LVGL.Simulator/ui/screens/: ui_AlarmPage.c  ui_ComputerPage.c  ui_MenuPage.c  ui_MessageArcPage.c  ui_MusicPage.c  ui_NFCCardPage.c  ui_Navigation.c  ui_SetTimePage.c
MDK-ARM/: F4-LVGL-Watch.uvguix.Praymerry  F4-LVGL-Watch.uvoptx  F4-LVGL-Watch.uvprojx  startup_stm32f407xx.lst
MidTask/: SinList.c  SinList.h  StrCalculate.c
(+868 files in other folders)
